fix(stress-tools): switch cs_extra_jvm_opts recommendation from G1GC to ZGC
Switch the recommended GC for cassandra-stress from G1GC (already the
default on Java 21) to Generational ZGC which provides sub-millisecond
pauses. The cassandra-stress 3.20.6 Docker image ships with Java 21
(Temurin), so ZGC Generational is fully supported. This addresses
reviewer feedback that G1 is redundant as the default GC.

Updated the config description example and integration test to use:
-XX:+UseZGC -XX:+ZGenerational -Xms8g -Xmx8g -XX:+AlwaysPreTouch