@@ -3357,7 +3357,7 @@ enable debug for cassandra-stress
 
 ## **cs_extra_jvm_opts** / SCT_CS_EXTRA_JVM_OPTS
 
-Extra JVM options passed to cassandra-stress via JVM_OPTS environment variable. Example: '-XX:+UseG1GC -XX:MaxGCPauseMillis=50 -Xmx8g'
+Extra JVM options passed to cassandra-stress via JVM_OPTS environment variable. Recommended for low-latency: '-XX:+UseZGC -XX:+ZGenerational -Xms8g -Xmx8g -XX:+AlwaysPreTouch' (requires Java 21+, which cassandra-stress 3.20.6+ ships with).
 
 **default:** N/A
 
